@@ -712,6 +712,15 @@
             </TCEforms>
           </stadiumlist.stadium.links.show.pid>
 
+          <stadiumlist.map.showBasePoint>
+            <TCEforms>
+              <exclude>1</exclude>
+              <label>LLL:EXT:cfc_league_fe/locallang_db.xml:plugin.competition.flexform.showDistanceBasePoint</label>
+              <config>
+                <type>check</type>
+              </config>
+            </TCEforms>
+          </stadiumlist.map.showBasePoint>
 
           <stadiumlistTemplate>
             <TCEforms>
