@@ -368,6 +368,16 @@
               </config>
             </TCEforms>
           </clublist.options.orderby.RAND>
+          <clublist.map.showBasePoint>
+            <TCEforms>
+              <exclude>1</exclude>
+              <label>LLL:EXT:cfc_league_fe/locallang_db.xml:plugin.competition.flexform.showDistanceBasePoint</label>
+              <config>
+                <type>check</type>
+              </config>
+            </TCEforms>
+          </clublist.map.showBasePoint>
+
           <clublist.options.debug>
             <TCEforms>
               <exclude>1</exclude>
