@@ -73,6 +73,13 @@ lib.t3sports.stadium {
   map =< lib.t3sports.map
   map.template = {$plugin.tx_cfcleaguefe_competition.stadiumlistTemplate}
   map.stadium =< lib.t3sports.stadium
+  distance {
+    noTrimWrap = || km|
+    required = 1
+    number_format.decimal = 1
+    number_format.thousands_sep = .
+    number_format.dec_point = ,
+  }
   # Used as base for distance calculation
   _basePosition.latitude = {$plugin.tx_cfcleaguefe_competition.basePosition_latitude}
   _basePosition.longitude = {$plugin.tx_cfcleaguefe_competition.basePosition_longitude}
@@ -235,6 +242,13 @@ lib.t3sports.club {
   dam_logo =< lib.t3sports.club.logo
   stadium =< lib.t3sports.stadium
   team =< lib.t3sports.team
+  distance {
+    noTrimWrap = || km|
+    required = 1
+    number_format.decimal = 1
+    number_format.thousands_sep = .
+    number_format.dec_point = ,
+  }
   # Used as base for distance calculation
   _basePosition.latitude = {$plugin.tx_cfcleaguefe_competition.basePosition_latitude}
   _basePosition.longitude = {$plugin.tx_cfcleaguefe_competition.basePosition_longitude}
