@@ -44,6 +44,7 @@ Daten des Vereins beginnen mit ###TEAM_CLUB_...###, z.B.:
   <p>Verein: ###TEAM_CLUB_NAME###<br />
   Webseite: ###TEAM_CLUB_WWW###<br />
   Mail: ###TEAM_CLUB_EMAIL###<br />
+  ###LABEL_DISTANCE###: ###TEAM_CLUB_DISTANCE###<br />
   </p>
 
 </div>
