@@ -5,6 +5,7 @@
 v0.7.4 (??.07.2010)
  * Show goals own for opponent team
  * Draw map icons with GIFBuilder
+ * Distance calculation for clubs and stadiums
 
 v0.7.3 (04.07.2010)
  * Country integration for stadiums and clubs.
